[package]
name = "backlash"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fehler = "1"
color-eyre = "0.5"

dyn-clone = "1.0"
maplit = "1.0"

rustyline = "8.2"
xdg = "2.2"

combine = "4.6"
lasso = "0.5"
